tests/baselines/reference/detachedCommentAtStartOfFunctionBody1.errors.txt
detachedCommentAtStartOfFunctionBody1.ts(6,37): error TS2339: Property 'name' does not exist on type 'TestFile'.


==== detachedCommentAtStartOfFunctionBody1.ts (1 errors) ====
    class TestFile {
        foo(message: string): () => string {
            /// <summary>Test summary</summary>
            /// <param name="message" type="String" />
            /// <returns type="Function" />
            return () => message + this.name;
                                        ~~~~
!!! error TS2339: Property 'name' does not exist on type 'TestFile'.
        }
    }